# keyboardthing

./: .gitignore  Cargo.toml  LICENSE  README.md  keyboardthing.desktop
src/: main.rs  protocols.rs
ui/: app-window.slint
