[package]
name = "keyboardthing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "1.8.0", features = ["raw-window-handle-06"] }
i-slint-backend-winit = "=1.8.0"
raw-window-handle = "0.6"
wayland-client = "0.31.7"
wayland-scanner = "0.31.5"
wayland-backend = { version = "0.3.7", features = ["client_system"] }
wayland-protocols = { version = "0.32.5", features = ["client"] }
wayland-protocols-plasma = { version = "0.3.5", features = ["client"] }
smithay-client-toolkit = "0.19.2"
tempfile = "3.14.0"
log = "0.4.22"
flexi_logger = "0.29.6"
log-panics = { version = "2", features = ["with-backtrace"] }

[build-dependencies]
slint-build = "1.8.0"
